--- a/OnlineShop/Client/Pages/Auth/AuthDialog.razor
+++ b/OnlineShop/Client/Pages/Auth/AuthDialog.razor
@@ -15,14 +15,14 @@
     </TitleContent>
     <DialogContent>
         <MudTabs Elevation="0" Rounded="true" Centered="true" PanelClass="pa-6">
-            <MudTabPanel Text="Авторизация" ToolTip="ToolTip One">
+            <MudTabPanel Text="Авторизация">
                 <MudTextField @bind-Value="username" Label="Имя пользователя" Variant="Variant.Outlined" Margin="Margin.Dense" Error="@authResult"/>
                 <MudTextField @bind-Value="password" Label="Пароль" Variant="Variant.Outlined" Margin="Margin.Dense" Error="@authResult"/>
                 <MudText Color="Color.Error">@loginError</MudText>
                 <br>
                 <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Authorize" FullWidth="true">Войти</MudButton>
             </MudTabPanel>
-            <MudTabPanel Text="Регистрация" ToolTip="ToolTip Two">
+            <MudTabPanel Text="Регистрация">
                 <MudTextField @bind-Value="username" Label="Имя пользователя" Variant="Variant.Outlined" Margin="Margin.Dense" Error="@registerResult"/>
                 <MudTextField @bind-Value="password" Label="Пароль" Variant="Variant.Outlined" Margin="Margin.Dense" Error="@registerResult"/>
                 <MudTextField @bind-Value="passwordRepeated" Label="Повторите пароль" Variant="Variant.Outlined" Margin="Margin.Dense" Error="@registerResult"/>
@@ -98,9 +98,8 @@
             userCredentials.Password = password;
 
             var response = await client.PostAsJsonAsync<UserCredentials>("api/Auth", userCredentials);
-            User user = await response.Content.ReadFromJsonAsync<User>();
-
-            if (user.UserName != null)
+            
+            if (response.StatusCode == HttpStatusCode.OK)
             {
                 MudDialog.Close(DialogResult.Ok(true));
                 Snackbar.Clear();
