--- a/OnlineShop/Client/App.razor
+++ b/OnlineShop/Client/App.razor
@@ -11,7 +11,7 @@
 <MudSnackbarProvider/>
 <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData"/>
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
     </Found>
     <NotFound>
         <NotFoundPage></NotFoundPage>
