--- a/OnlineShop/Client/Shared/NotFoundPage.razor
+++ b/OnlineShop/Client/Shared/NotFoundPage.razor
@@ -1,4 +1,5 @@
-﻿<div class="background"></div>
+﻿@layout LayoutView
+<div class="background"></div>
 <main>
     <div>
         <h1 class="error">404</h1>
