--- a/OnlineShop/Client/Shared/NotFoundPage.razor.css
+++ b/OnlineShop/Client/Shared/NotFoundPage.razor.css
@@ -1,6 +1,6 @@
 ﻿.background {
     z-index: -1;
-    background: url("/static/halloween.jpg") repeat;
+    background: url("/static/images/halloween.jpg") repeat;
     background-size: 40%;
     height: 100vh;
     width: 100vw;
