--- a/OnlineShop/Client/App.razor
+++ b/OnlineShop/Client/App.razor
@@ -1,15 +1,19 @@
 @using OnlineShop.Client.Services
 @using System.Net.Http.Headers
 @using System.Net
+@using OnlineShop.Client.Pages.Auth
 @using OnlineShop.Client.Services.State
 @inject CookieStorage _cookieStorage
 @inject HttpClient _httpClient
 @inject AppState _appState
+@inject IDialogService _dialogService
+@inject Navigation _navigationManager
+@inject ISnackbar _snackBar
 
 <MudThemeProvider/>
 <MudDialogProvider/>
 <MudSnackbarProvider/>
-<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
+<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true" OnNavigateAsync="OnNavigateAsync">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
     </Found>
@@ -34,6 +38,33 @@
                 _appState.UserState.UserName = username;
             }
         }
+    }
+
+    private async Task OnNavigateAsync(NavigationContext context)
+    {
+        if (context.Path == "admin" || context.Path == "/admin")
+        {
+            if (_appState.UserState.UserName == null)
+            {
+                AbortNavigation();
+                _dialogService.Show<AuthDialog>();
+                return;
+            }
+
+            if (_appState.UserState.Role == "Admin")
+                return;
+            
+            AbortNavigation();
+            _snackBar.Add("You are not authorized to access this page", Severity.Error);
+        }
+    }
+
+    private void AbortNavigation()
+    {
+        if (_navigationManager.CanNavigateBack)
+            _navigationManager.NavigateBack();
+        else
+            _navigationManager.NavigateTo("/main");
     }
 
 }
