--- a/OnlineShop/Client/Pages/Profile/ImagesView.razor
+++ b/OnlineShop/Client/Pages/Profile/ImagesView.razor
@@ -1,15 +1,15 @@
-﻿@foreach (var image in Images)
+﻿@using OnlineShop.Shared
+@if (Images != null)
 {
-    <MudCard Class="my-2 pa-4">
-        <MudPaper Elevation="1" Height="100px" Width="100px"></MudPaper>
-        <MudText>Color</MudText>
-        @* <MudText Class="justify-end">@DateTime.Now</MudText> *@
-    </MudCard>
+    @foreach (var image in Images)
+    {
+        <ImageItem image="@image"></ImageItem>
+    }
 }
 
 @code {
 
     [Parameter]
-    public object[] Images { get; set; }
+    public UserImage[] Images { get; set; }
 
 }
