--- a/OnlineShop/Client/Pages/Profile/Profile.razor
+++ b/OnlineShop/Client/Pages/Profile/Profile.razor
@@ -25,18 +25,18 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var requestOperations = await client.PutAsync("api/Operations", null);
-        var requestImages = await client.PutAsync("api/Images", null);
-        if (requestOperations.StatusCode != HttpStatusCode.Unauthorized && requestImages.StatusCode != HttpStatusCode.Unauthorized)
-        {
-            Purchases = await requestOperations.Content.ReadFromJsonAsync<PurchaseGoods[]>();
-            Images = await requestImages.Content.ReadFromJsonAsync<UserImage[]>();
-        }
-        else
-        {
-            Dialog.Show<AuthDialog>();
-        }
+        var requestOperations = await client.PostAsJsonAsync("api/Operations/GetUserOperations", 1);
+        var requestImages = await client.PostAsJsonAsync("api/Image/GetImages", 1);
+        //if (requestOperations.StatusCode != HttpStatusCode.Unauthorized && requestImages.StatusCode != HttpStatusCode.Unauthorized)
+        //{
+        Purchases = await requestOperations.Content.ReadFromJsonAsync<PurchaseGoods[]>();
+        Images = await requestImages.Content.ReadFromJsonAsync<UserImage[]>();
+        //}
+        //else
+        //{
+        //    Dialog.Show<AuthDialog>();
+        //}
     }
 
-    
+
 }
