--- a/OnlineShop/Client/App.razor
+++ b/OnlineShop/Client/App.razor
@@ -1,9 +1,9 @@
 @using OnlineShop.Client.Services
-@using System.Net.Http.Headers
-@using System.Net
 @using OnlineShop.Client.Pages.Auth
 @using OnlineShop.Client.Services.State
 @using OnlineShop.Shared
+@using System.Net.Http.Headers
+@using System.Net
 @inject CookieStorage _cookieStorage
 @inject HttpClient _httpClient
 @inject AppState _appState
@@ -11,10 +11,10 @@
 @inject Navigation _navigationManager
 @inject ISnackbar _snackBar
 
-<MudThemeProvider/>
-<MudDialogProvider/>
-<MudSnackbarProvider/>
 <CascadingValue Name="AppState" Value="@_appState">
+    <MudThemeProvider/>
+    <MudDialogProvider/>
+    <MudSnackbarProvider/>
     <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true" OnNavigateAsync="OnNavigateAsync">
         <Found Context="routeData">
             <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
@@ -29,8 +29,12 @@
 
     protected override async Task OnInitializedAsync()
     {
+        Console.WriteLine($"Initial User state = {_appState?.UserState}");
         string token = await _cookieStorage.GetCookie<string>("_token");
-        if (token != "")
+
+        if (token == "")
+            Console.WriteLine($"Fail Fetch");
+        else
         {
             _httpClient.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("Bearer", token);
             var responseMessage = await _httpClient.GetAsync("api/Auth/GetUserInfo");
@@ -38,8 +42,9 @@
             if (responseMessage.StatusCode == HttpStatusCode.OK)
             {
                 var userState = await responseMessage.Content.ReadFromJsonAsync<UserInfo>();
-                _appState.UserState = userState;
+                _appState.SetUserState(userState);
             }
+            Console.WriteLine($"Fetch User state = {_appState?.UserState}");
         }
     }
 
